istio/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: backend-service
spec:
  hosts:
    - myapp.example.com
  gateways:
    - istio-ingress
  http:
    - route:
        - destination:
            host: backend-service.default.svc.cluster.local
            subset: v1
          weight: 50
        - destination:
            host: backend-service.default.svc.cluster.local
            subset: v2
          weight: 50
